--- a/.env
+++ b/.env
@@ -27,6 +27,6 @@ APP_SECRET=a6ca4b56ede53170bfd44452848c55f8
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://dev:password@vi_school_symfony_mysql:3306/vi_school_symfony_db"
+DATABASE_URL="mysql://dev:password@vi_school_symfony_mini_project_mysql:3306/vi_school_symfony_db"
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
